Internal Error in src/cpu/ppc/vm/macroAssembler_ppc.cpp:4287

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b96
    • ppc
    • linux

      Running JVM built for PPC64LE with --enable-debug option results in internal error:
      $ images/jdk/bin/java -Xcomp
      PPC assembly code requires stop: (stop) SharedRuntime::generate_deopt_blob: expected Unpack_uncommon_trap
      # To suppress the following error report, specify this argument
      # after -XX: or in .hotspotrc: SuppressErrorAt=/macroAssembler_ppc.cpp:4287
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/home/asmundak/jdk9/hs-comp/hotspot/src/cpu/ppc/vm/macroAssembler_ppc.cpp:4287), pid=52254, tid=52255
      # guarantee(false) failed: PPC assembly code requires stop: SharedRuntime::generate_deopt_blob: expected Unpack_uncommon_trap
      #
      # JRE version: OpenJDK Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-asmundak_2015_11_16_15_45-b00)
      # Java VM: OpenJDK 64-Bit Server VM (1.9.0-internal-fastdebug-asmundak_2015_11_16_15_45-b00, compiled mode, compressed oops, g1 gc, linux-ppc64)
      # Core dump will be written. Default location: /home/asmundak/builds/jdk9/hs-comp.debug/core

      I believe this is due to typo introduced in the http://hg.openjdk.java.net/jdk9/hs-comp/hotspot/rev/9dbae662b09d

            Assignee:
            Alexander Smundak (Inactive)
            Reporter:
            Alexander Smundak (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: