8143180: Internal Error in src/cpu/ppc/vm/macroAssembler_ppc.cpp:4287

Fix ppc64 issue after 8141133.

Reviewed-by: simonis, goetz